# opencv-demo

./: CMakeCache.txt  CMakeLists.txt  Makefile  changeimage  changeimage.c  cmake_install.cmake  data.txt  jpgtoavi  jpgtoavi.c  manageimage  manageimage.c  opencv  opencvmat.c  opencvmat.cpp
